--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -15,18 +15,21 @@
 }
 
 .item {
-  height: 36px;
-  width: 36px;
-  background-color: #ceaced;
-  border-radius: 5px;
-  border: none;
-  text-align: center;
-  text-decoration: none;
+  height: 30px;
+  width: 30px;
+  align-self: center;
+  cursor: pointer;
+}
+
+.item-2 {
+  height: 26px;
+  width: 26px;
+  align-self: center;
+  cursor: pointer;
 }
 
 .profile-photo {
   height: 36px;
   width: 36px;
-  background-color: #ceaced;
   border-radius: 36px;
 }
